@@ -14,7 +14,8 @@
    <metal:block define-slot="intro-text" />
 
    <table class="listing nosort issue-search-results"
-       tal:define="states here/getIssueWorkflowStates"
+       tal:define="states here/getIssueWorkflowStates;
+                   pas_member context/@@pas_member;"
        tal:condition="nocall:issues">
        <thead>
            <tr>
@@ -55,7 +56,8 @@
                    <td tal:content="item/getSeverity" />
                    <td>
                        <span tal:condition="python:item.getResponsibleManager != '(UNASSIGNED)'"
-                             tal:replace="python: context.poi_niceName(item.getResponsibleManager)" />
+                             tal:define="manager python:pas_member.info(item.getResponsibleManager)"
+                             tal:replace="manager/name_or_id" />
                        <div tal:condition="python:item.getResponsibleManager == '(UNASSIGNED)'"
                             style="text-align:center">&mdash;</div>
                    </td>
